--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -124,13 +124,18 @@
           <a href="contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
+          <a href="review.html" class="text-white hover:underline">Review</a>
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline">
-            Feedback
-          </a>
-          <a href="privacy.html" class="text-white hover:underline">
-            Privacy Policy
-          </a>
+          <a href="feedback.html" class="text-white hover:underline"
+            >Feedback</a
+          >
+          <a href="terms.html" class="text-white hover:underline"
+            >Terms & Conditions</a
+          >
+          <a href="blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="privacy.html" class="text-white hover:underline"
+            >Privacy Policy</a
+          >
         </div>
       </div>
 
