--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -298,28 +298,28 @@
           </p>
         </div>
         <!-- Footer Links (Right Side) -->
-        <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
-            >Contact Us</a
-          >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
-            >Feedback</a
-          >
-          <a href="terms.html" class="text-white hover:underline"
-            >Terms & Conditions</a
-          >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
-            >Privacy Policy</a
-          >
-        </div>
+      
       </div>
 
       <!-- Social Links & Copyright (Centered at Bottom) -->
-      <div class="bottom-footer">
+      <div class="bottom-footer">  <div class="footer-links">
+        <a href="about.html" class="text-white hover:underline">About Us</a>
+        <a href="contact.html" class="text-white hover:underline"
+          >Contact Us</a
+        >
+        <a href="review.html" class="text-white hover:underline">Review</a>
+        <a href="faq.html" class="text-white hover:underline">FAQ</a>
+        <a href="feedback.html" class="text-white hover:underline"
+          >Feedback</a
+        >
+        <a href="terms.html" class="text-white hover:underline"
+          >Terms & Conditions</a
+        >
+        <a href="blog.html" class="text-white hover:underline"> Blog </a>
+        <a href="privacy.html" class="text-white hover:underline"
+          >Privacy Policy</a
+        >
+      </div>
         <p>&copy; 2025 Samnwadh. All rights reserved.</p>
         <div class="social-links">
           <a href="https://github.com/ak-0283"><i class="fab fa-github"></i></a>
