--- a/Frontend/faq.html
+++ b/Frontend/faq.html
@@ -62,20 +62,22 @@
     <!-- Navbar -->
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
-        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <a href="index.html"><img  class="logo" src="logo.webp" alt="Samnwadh" /></a>
-        <nav class="navbar" id="navbar">
-          <ul class="nav-links">
-            <li><a href="#features">Features</a></li>
-            <li><a href="techstack.html">Tech Stack</a></li>
-            <li><a href="contributor/contributor.html">Contribute</a></li>
-            <li><a href="#community">Community</a></li>
-            <li><a href="review.html">Review</a></li>
-            <li><a href="login.html">Login</a></li>
-          </ul>
-        </nav>
+          <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+          <a href="index.html"><img class="logo" src="logo.webp" alt="Samnwadh" /></a>
+          <nav class="navbar" id="navbar">
+              <ul class="nav-links">
+                  <li><a href="#features">Features</a></li>
+                  <li><a href="techstack.html">Tech Stack</a></li>
+                  <li><a href="contributor/contributor.html">Contribute</a></li>
+                  <li><a href="#community">Community</a></li>
+                  <li><a href="review.html">Review</a></li>
+                  <li><a href="login.html">Login</a></li>
+              </ul>
+          </nav>
       </div>
-    </header>
+  </header>
+  
+  
     <!-- scroll button -->
     <button id="scrollBtn" onclick="scrollToTop()">
       <i class="fas fa-arrow-up"></i>
@@ -178,24 +180,49 @@
     <!-- footer section -->
     <footer class="bg-blue-600 text-white py-8">
       <div class="footer-container">
-        <!-- Footer Links (Right Side) -->
-        <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
-            >Contact Us</a
-          >
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline">
-            Feedback
-          </a>
-          <a href="privacy.html" class="text-white hover:underline">
-            Privacy Policy
-          </a>
+        <div class="newsletter">
+          <h3>Subscribe to our Newsletter</h3>
+          <form id="subscribeForm">
+            <input
+              type="email"
+              id="emailInput"
+              placeholder="Enter your email"
+              required
+            />
+            <button class="submit" type="submit">Subscribe</button>
+          </form>
         </div>
+        <div class="footerLinksForAdminInfo">
+          <p>📍 Location: xyz, India</p>
+          <p>📞 Phone: <a href="tel:+919876543210">+91 99999 99990</a></p>
+          <p>
+            📧 Email:
+            <a href="mailto:your-email@example.com">your-email@example.com</a>
+          </p>
+        </div>
+        <!-- Footer Links (Right Side) -->
+      
       </div>
 
       <!-- Social Links & Copyright (Centered at Bottom) -->
-      <div class="bottom-footer">
+      <div class="bottom-footer">  <div class="footer-links">
+        <a href="about.html" class="text-white hover:underline">About Us</a>
+        <a href="contact.html" class="text-white hover:underline"
+          >Contact Us</a
+        >
+        <a href="review.html" class="text-white hover:underline">Review</a>
+        <a href="faq.html" class="text-white hover:underline">FAQ</a>
+        <a href="feedback.html" class="text-white hover:underline"
+          >Feedback</a
+        >
+        <a href="terms.html" class="text-white hover:underline"
+          >Terms & Conditions</a
+        >
+        <a href="blog.html" class="text-white hover:underline"> Blog </a>
+        <a href="privacy.html" class="text-white hover:underline"
+          >Privacy Policy</a
+        >
+      </div>
         <p>&copy; 2025 Samnwadh. All rights reserved.</p>
         <div class="social-links">
           <a href="https://github.com/ak-0283"><i class="fab fa-github"></i></a>
