--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -67,7 +67,11 @@
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
 
         <a href="index.html"
-          ><img src="logo.webp" alt="Samnwadh" class="logo"
+          ><img
+            src="logo.webp"
+            alt="Samnwadh"
+            class="logo"
+            style="margin: 18px"
         /></a>
 
         <nav class="navbar">
