--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -38,7 +38,7 @@
         <input type="text" name="name" placeholder="Name" required />
         <input type="email" name="email" placeholder="Email" required />
         <input type="text" name="address" placeholder="Your Address" required />
-        <input type="tel" name="phone" placeholder="Your Phone" required/>
+        <input type="tel" name="phone" placeholder="Your Phone"  maxlength="10" required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,10);"/>
         <textarea
           name="message"
           rows="4"
