--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -197,7 +197,7 @@
           </p>
         </div>
         <!-- Footer Links (Right Side) -->
-        <div class="footer-links">
+        <div class="bottom-footer">  <div class="footer-links">
           <a href="about.html" class="text-white hover:underline">About Us</a>
           <a href="contact.html" class="text-white hover:underline"
             >Contact Us</a
@@ -206,6 +206,13 @@
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
+          >
+          <a href="terms.html" class="text-white hover:underline"
+            >Terms & Conditions</a
+          >
+          <a href="blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="privacy.html" class="text-white hover:underline"
+            >Privacy Policy</a
           >
         </div>
       </div>
