--- a/Frontend/privacy.html
+++ b/Frontend/privacy.html
@@ -1,101 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Samnwadh</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="toggle.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
-    />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f8f9fa;
-        margin: 0;
-        padding: 0;
-        color: #333;
-      }
-
-      .containerprivacy {
-        max-width: 800px;
-        margin: 50px auto;
-        padding: 20px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-      }
-
-      h1 {
-        text-align: center;
-        color: #2c3e50;
-        margin-bottom: 20px; /* Added spacing below h1 */
-      }
-
-      h2 {
-        color: #3498db;
-        margin-top: 30px; /* Added spacing above */
-        margin-bottom: 15px; /* Added spacing below */
-      }
-
-      p,
-      ul {
-        line-height: 1.8;
-        margin-bottom: 15px; /* Added spacing below paragraphs and lists */
-      }
-
-      a {
-        color: #007bff;
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-      .dark-mode h1,
-      .dark-mode h2,
-      .dark-mode a {
-        color: goldenrod;
-      }
-      .dark-mode .containerprivacy {
-        background-color: #333;
-        color: #fff;
-      }
-    </style>
-  </head>
-  <body class="bg-gray-100 text-gray-900">
-    <header class="bg-blue-600 text-white p-6">
-      <div class="container">
-        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
-        <nav class="navbar" id="navbar">
-          <ul class="nav-links">
-            <li><a href="#features">Features</a></li>
-            <li><a href="techstack.html">Tech Stack</a></li>
-            <li><a href="contributor/contributor.html">Contribute</a></li>
-            <li><a href="community.html">Community</a></li>
-            <li><a href="login.html">Login</a></li>
-          </ul>
-          <button type="button" id="darkModeToggle" class="toggle">
-            <span class="icon sun">☀️</span>
-            <span class="icon moon">🌙</span>
-          </button>
-        </nav>
-      </div>
-    </header>
-    <!-- scroll button -->
-    <button id="scrollBtn" onclick="scrollToTop()">
-      <i class="fas fa-arrow-up"></i>
-    </button>
-    <div class="containerprivacy">
-      <h1>Privacy Policy</h1>
-      <p>Effective Date: [19th Feb,2025]</p>
-
 
 <head>
   <meta charset="UTF-8" />
@@ -346,65 +250,50 @@
           <a href="mailto:your-email@example.com">your-email@example.com</a>
         </p>
 
-    <!-- footer section -->
-    <footer class="bg-blue-600 text-white py-8">
-      <div class="footer-container">
-        <div class="newsletter">
-          <h3>Subscribe to our Newsletter</h3>
-          <form id="subscribeForm">
-            <input
-              type="email"
-              id="emailInput"
-              placeholder="Enter your email"
-              required
-            />
-            <button class="submit" type="submit">Subscribe</button>
-          </form>
-        </div>
-        <div class="footerLinksForAdminInfo">
-          <p>📍 Location: xyz, India</p>
-          <p>📞 Phone: <a href="tel:+919876543210">+91 99999 99990</a></p>
-          <p>
-            📧 Email:
-            <a href="mailto:your-email@example.com">your-email@example.com</a>
-          </p>
-        </div>
-        <!-- Footer Links (Right Side) -->
-        <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
-            >Contact Us</a
-          >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
-            >Feedback</a
-          >
-          <a href="community.html" class="text-white hover:underline"
-            >Community</a
-          >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
-            >Privacy Policy</a
-          >
-          <a href="terms.html" class="text-white hover:underline"
-            >Terms & Conditions</a
-          >
-        </div>
+        <!-- footer section -->
+        <footer class="bg-blue-600 text-white py-8">
+          <div class="footer-container">
+            <div class="newsletter">
+              <h3>Subscribe to our Newsletter</h3>
+              <form id="subscribeForm">
+                <input type="email" id="emailInput" placeholder="Enter your email" required />
+                <button class="submit" type="submit">Subscribe</button>
+              </form>
+            </div>
+            <div class="footerLinksForAdminInfo">
+              <p>📍 Location: xyz, India</p>
+              <p>📞 Phone: <a href="tel:+919876543210">+91 99999 99990</a></p>
+              <p>
+                📧 Email:
+                <a href="mailto:your-email@example.com">your-email@example.com</a>
+              </p>
+            </div>
+            <!-- Footer Links (Right Side) -->
+            <div class="footer-links">
+              <a href="about.html" class="text-white hover:underline">About Us</a>
+              <a href="contact.html" class="text-white hover:underline">Contact Us</a>
+              <a href="review.html" class="text-white hover:underline">Review</a>
+              <a href="faq.html" class="text-white hover:underline">FAQ</a>
+              <a href="feedback.html" class="text-white hover:underline">Feedback</a>
+              <a href="community.html" class="text-white hover:underline">Community</a>
+              <a href="blog.html" class="text-white hover:underline"> Blog </a>
+              <a href="privacy.html" class="text-white hover:underline">Privacy Policy</a>
+              <a href="terms.html" class="text-white hover:underline">Terms & Conditions</a>
+            </div>
 
+          </div>
+          <!-- Footer Links (Right Side) -->
+          <div class="footer-links">
+            <a href="about.html" class="text-white hover:underline">About Us</a>
+            <a href="contact.html" class="text-white hover:underline">Contact Us</a>
+            <a href="review.html" class="text-white hover:underline">Review</a>
+            <a href="faq.html" class="text-white hover:underline">FAQ</a>
+            <a href="feedback.html" class="text-white hover:underline">Feedback</a>
+            <a href="blog.html" class="text-white hover:underline"> Blog </a>
+            <a href="privacy.html" class="text-white hover:underline">Privacy Policy</a>
+            <a href="terms.html" class="text-white hover:underline">Terms & Conditions</a>
+          </div>
       </div>
-      <!-- Footer Links (Right Side) -->
-      <div class="footer-links">
-        <a href="about.html" class="text-white hover:underline">About Us</a>
-        <a href="contact.html" class="text-white hover:underline">Contact Us</a>
-        <a href="review.html" class="text-white hover:underline">Review</a>
-        <a href="faq.html" class="text-white hover:underline">FAQ</a>
-        <a href="feedback.html" class="text-white hover:underline">Feedback</a>
-        <a href="blog.html" class="text-white hover:underline"> Blog </a>
-        <a href="privacy.html" class="text-white hover:underline">Privacy Policy</a>
-        <a href="terms.html" class="text-white hover:underline">Terms & Conditions</a>
-      </div>
-    </div>
   </footer>
   <script src="script.js"></script>
   <script src="toggle.js"></script>
