--- a/Frontend/about/about.html
+++ b/Frontend/about/about.html
@@ -12,18 +12,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
   </head>
-  <style>
-    .navbar {
-      justify-content: flex-start !important;
-    }
-    footer {
-      padding: 10px;
-    }
-  </style>
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="back-button" onclick="window.location.href = 'index.html'">
+      <button class="back-button" onclick="window.location.href = '../index.html'">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
       <button type="button" id="darkModeToggle" class="toggle">
