--- a/Frontend/privacy/privacy.html
+++ b/Frontend/privacy/privacy.html
@@ -7,122 +7,9 @@
   <title>Privacy Policy - Samnwadh</title>
   <link rel="stylesheet" href="../mainpage/style.css" />
   <link rel="stylesheet" href="../toggle/toggle.css" />
+  <link rel="stylesheet" href="./privacy.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-
-    .containerprivacy {
-      max-width: 800px;
-      margin: 50px auto;
-      padding: 20px;
-      border: 2px solid #2B6CB0;
-      box-shadow: 0px 4px 8px #2B6CB0;
-      border-radius: 8px;
-      text-align: center;
-    }
-
-    .containerprivacy:hover {
-      box-shadow: 0px 8px 16px #2B6CB0;
-      transform: scale(1.02);
-    }
-
-    h1 {
-      text-align: center;
-      color: #333;
-      text-shadow: 2px 2px 2px #2B6CB0;
-      margin-bottom: 20px;
-      /* Added spacing below h1 */
-    }
-
-    h2 {
-      color: #3498db;
-      margin-top: 30px;
-      margin-bottom: 15px;
-    }
-
-    p,
-    ul {
-      line-height: 1.8;
-      margin-bottom: 15px;
-
-    }
-
-    a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .dark-mode h1,
-    .dark-mode h2,
-    .dark-mode a {
-      color: goldenrod;
-    }
-
-    .dark-mode .containerprivacy {
-      background-color: #333;
-      color: #fff;
-
-    }
-
-    .content {
-      margin-bottom: 20px;
-      border: 2px solid #2B6CB0;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0px 4px 8px #2B6CB0;
-    }
-
-    .content:hover {
-      transform: translateY(-10px);
-    }
-
-    .content ul li {
-      list-style: none;
-      border: 2px solid #2B6CB0;
-      padding: 10px;
-      border-radius: 8px;
-      margin: 0.5rem auto;
-      width: 80%;
-      box-shadow: 2px 2px 4px #2B6CB0;
-    }
-
-    .back-btn {
-      background: linear-gradient(to right, #3498db, #2B6CB0);
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
-
-    .back-btn:hover {
-      background: linear-gradient(to right, #2B6CB0, #3498db);
-      transform: scale(1.02);
-      box-shadow: 0px 4px 8px #2B6CB0;
-    }
-
-    .dark-mode .back-btn {
-      background: linear-gradient(to right, goldenrod, rgb(169, 125, 14));
-      color: #fff;
-    }
-
-    .dark-mode .content {
-      border: 2px solid goldenrod;
-      box-shadow: 0px 4px 8px goldenrod;
-    }
-
-    .dark-mode .content ul li {
-      border: 2px solid goldenrod;
-      box-shadow: 2px 2px 4px goldenrod;
-    }
-  </style>
 </head>
 
 <body class="bg-gray-100 text-gray-900">
