--- a/Frontend/terms/terms.html
+++ b/Frontend/terms/terms.html
@@ -7,127 +7,9 @@
   <title>Terms and Conditions - Samnwadh</title>
   <link rel="stylesheet" href="../mainpage/style.css" />
   <link rel="stylesheet" href="../toggle/toggle.css" />
+  <link rel="stylesheet" href="./terms.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-
-    .containerterms {
-      max-width: 800px;
-      margin: 50px auto;
-      padding: 20px;
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      text-align: center;
-      border: 2px solid #2B6CB0;
-      box-shadow: 0px 4px 8px #2B6CB0;
-    }
-
-    .containerterms:hover {
-      box-shadow: 0px 8px 16px #2B6CB0;
-      transform: scale(1.02);
-    }
-
-    h1 {
-      text-align: center;
-      color: #333;
-      text-shadow: 2px 2px 2px #2B6CB0;
-      margin-bottom: 20px;
-    }
-
-    h2 {
-      color: #3498db;
-      margin-top: 30px;
-      margin-bottom: 15px;
-    }
-
-    p,
-    ul {
-      line-height: 1.8;
-      margin-bottom: 15px;
-    }
-
-    .content p a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .content p a:hover {
-      text-decoration: underline;
-    }
-
-    a {
-      color: #fff;
-      text-decoration: none;
-    }
-
-    .dark-mode h1 {
-      color: goldenrod;
-      text-shadow: 2px 2px 2px #333;
-    }
-
-    .dark-mode h2 {
-      color: goldenrod;
-    }
-
-    .dark-mode .containerterms {
-      background-color: #333;
-    }
-
-    .content {
-      margin-bottom: 20px;
-      border: 2px solid #2B6CB0;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0px 4px 8px #2B6CB0;
-    }
-
-    .content:hover {
-      transform: translateY(-10px);
-    }
-
-    .back-btn {
-      background: linear-gradient(to right, #3498db, #2B6CB0);
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
-
-    .back-btn:hover {
-      background: linear-gradient(to right, #2B6CB0, #3498db);
-      transform: scale(1.02);
-      box-shadow: 0px 4px 8px #2B6CB0;
-    }
-
-    .dark-mode .back-btn {
-      background: linear-gradient(to right, goldenrod, rgb(169, 125, 14));
-      color: #fff;
-
-    }
-
-    .dark-mode .back-btn:hover {
-      box-shadow: 0px 2px 2px goldenrod;
-      color: #fff;
-    }
-
-    .dark-mode .content {
-      border: 2px solid goldenrod;
-      box-shadow: 0px 4px 8px goldenrod;
-    }
-
-    .dark-mode .content ul li {
-      border: 2px solid goldenrod;
-      box-shadow: 2px 2px 4px goldenrod;
-    }
-  </style>
 </head>
 
 <body>
