--- a/Frontend/createroom/createRoom.html
+++ b/Frontend/createroom/createRoom.html
@@ -16,6 +16,10 @@
       <button class="back-button" onclick="window.location.href = '../index.html'">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
+      <button type="button" id="darkModeToggle" class="toggle">
+        <span class="icon sun">☀️</span>
+        <span class="icon moon">🌙</span>
+      </button>
     </nav>
     <div class="form-container">
       <h2>Create a Room</h2>
